--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AgentVerse - Multi-Agent Visual Collaboration</title>
+  <link rel="stylesheet" href="/src/index.css" />
   <style>
     * {
       margin: 0;
@@ -191,10 +192,6 @@
       display: flex;
       align-items: center;
       gap: 6px;
-    }
-
-    .agent-info h4 .emoji {
-      font-size: 1rem;
     }
 
     .agent-info .role {
@@ -479,11 +476,6 @@
       padding: 40px 20px;
     }
 
-    .welcome-message .emoji {
-      font-size: 2rem;
-      display: block;
-      margin-bottom: 12px;
-    }
 
     /* Agent Detail Modal */
     #agent-modal {
@@ -744,6 +736,98 @@
       font-size: 0.85rem;
     }
 
+    /* Lucide Icons */
+    .lucide {
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      stroke: currentColor;
+      stroke-width: 2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+      fill: none;
+    }
+
+    .lucide.lucide-search::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3ccircle cx='11' cy='11' r='8'/%3e%3cpath d='m21 21-4.35-4.35'/%3e%3c/svg%3e");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    .lucide.lucide-brain::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M9.5 2A2.5 2.5 0 0 1 12 4.5v15a2.5 2.5 0 0 1-4.96.44 2.5 2.5 0 0 1-4.96-.44V4.5A2.5 2.5 0 0 1 4.5 2h5Z'/%3e%3cpath d='M9.5 2A2.5 2.5 0 0 1 12 4.5v15a2.5 2.5 0 0 1-4.96.44 2.5 2.5 0 0 1-4.96-.44V4.5A2.5 2.5 0 0 1 4.5 2h5Z'/%3e%3cpath d='M7 10h.01'/%3e%3cpath d='M11 10h.01'/%3e%3cpath d='M7 14h.01'/%3e%3cpath d='M11 14h.01'/%3e%3cpath d='M7 18h.01'/%3e%3cpath d='M11 18h.01'/%3e%3c/svg%3e");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    .lucide.lucide-pen-tool::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='m12 19 7-7 3 3-7 7-3-3z'/%3e%3cpath d='m18 13-1.5-7.5L2 2l3.5 14.5L13 18l5-5z'/%3e%3cpath d='m2 2 7.586 7.586'/%3e%3ccircle cx='11' cy='11' r='2'/%3e%3c/svg%3e");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    .lucide.lucide-trending-up::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='23 6 13.5 15.5 9.5 11.5 1 19'/%3e%3cpolyline points='17 6 23 6 23 12'/%3e%3c/svg%3e");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    .lucide.lucide-user::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2'/%3e%3ccircle cx='12' cy='7' r='4'/%3e%3c/svg%3e");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    .lucide.lucide-message-circle::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='m3 21 1.9-5.7a8.5 8.5 0 1 1 3.8 3.8z'/%3e%3c/svg%3e");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    /* Adjust icon sizes for different contexts */
+    .agent-icon.lucide {
+      width: 2rem;
+      height: 2rem;
+    }
+
+    .emoji.lucide,
+    .welcome-message .lucide {
+      width: 1.2rem;
+      height: 1.2rem;
+      vertical-align: middle;
+      margin-right: 0.25rem;
+    }
+
+    .agent-info h4 .lucide {
+      width: 1rem;
+      height: 1rem;
+      margin-right: 6px;
+    }
+
     /* Scrollbar styling */
     ::-webkit-scrollbar {
       width: 6px;
@@ -764,19 +848,8 @@
   </style>
 </head>
 <body>
-  <!-- Loading overlay -->
-  <div id="loading-overlay">
-    <h1 class="loading-title">AgentVerse</h1>
-    <p class="loading-subtitle">Multi-Agent Visual Collaboration</p>
-    <div class="agent-icons">
-      <span class="agent-icon">&#128269;</span>
-      <span class="agent-icon">&#129497;</span>
-      <span class="agent-icon">&#9997;&#65039;</span>
-      <span class="agent-icon">&#128200;</span>
-      <span class="agent-icon">&#128075;</span>
-    </div>
-    <p class="loading-text">Loading agents...</p>
-  </div>
+  <!-- React root for loading overlay - positioned absolutely, doesn't block game -->
+  <div id="root" style="position: fixed; top: 0; left: 0; pointer-events: none; z-index: 9999;"></div>
 
   <!-- Main App Container -->
   <div id="app-container">
@@ -811,7 +884,7 @@
             <div class="agent-sprite" style="background-image: url('/assets/sprites/archie.png');"></div>
           </div>
           <div class="agent-info">
-            <h4><span class="emoji">&#128269;</span> Scout</h4>
+            <h4><span class="lucide lucide-search"></span> Scout</h4>
             <div class="role">Research Specialist</div>
           </div>
           <div class="agent-status"></div>
@@ -822,7 +895,7 @@
             <div class="agent-sprite" style="background-image: url('/assets/sprites/steven.png');"></div>
           </div>
           <div class="agent-info">
-            <h4><span class="emoji">&#129497;</span> Sage</h4>
+            <h4><span class="lucide lucide-brain"></span> Sage</h4>
             <div class="role">Strategic Analyst</div>
           </div>
           <div class="agent-status"></div>
@@ -833,7 +906,7 @@
             <div class="agent-sprite" style="background-image: url('/assets/sprites/birch.png');"></div>
           </div>
           <div class="agent-info">
-            <h4><span class="emoji">&#9997;&#65039;</span> Chronicle</h4>
+            <h4><span class="lucide lucide-pen-tool"></span> Chronicle</h4>
             <div class="role">Newsroom Editor</div>
           </div>
           <div class="agent-status"></div>
@@ -844,7 +917,7 @@
             <div class="agent-sprite" style="background-image: url('/assets/sprites/maxie.png');"></div>
           </div>
           <div class="agent-info">
-            <h4><span class="emoji">&#128200;</span> Trends</h4>
+            <h4><span class="lucide lucide-trending-up"></span> Trends</h4>
             <div class="role">Intelligence Analyst</div>
           </div>
           <div class="agent-status"></div>
@@ -855,7 +928,7 @@
             <div class="agent-sprite sprite-14" style="background-image: url('/assets/sprites/may.png');"></div>
           </div>
           <div class="agent-info">
-            <h4><span class="emoji">&#128075;</span> Maven</h4>
+            <h4><span class="lucide lucide-user"></span> Maven</h4>
             <div class="role">General Assistant</div>
           </div>
           <div class="agent-status"></div>
@@ -881,7 +954,7 @@
       </div>
       <div id="chat-messages">
         <div class="welcome-message">
-          <span class="emoji">&#128075;</span>
+          <span class="lucide lucide-user"></span>
           Ask a question and watch the agents collaborate!
         </div>
       </div>
@@ -923,13 +996,15 @@
     </div>
   </div>
 
+  <script type="module" src="/src/main.tsx"></script>
   <script type="module" src="/src/index.ts"></script>
   <script>
     // Agent data for modal
     const agentData = {
       scout: {
         name: 'Scout',
-        emoji: '&#128269;',
+        iconClass: 'lucide lucide-search',
+        emoji: '&#128269;', // Keep for backward compatibility
         role: 'Research Specialist',
         sprite: '/assets/sprites/archie.png',
         spriteWidth: 16,
@@ -938,7 +1013,8 @@
       },
       sage: {
         name: 'Sage',
-        emoji: '&#129497;',
+        iconClass: 'lucide lucide-brain',
+        emoji: '&#129497;', // Keep for backward compatibility
         role: 'Strategic Analyst',
         sprite: '/assets/sprites/steven.png',
         spriteWidth: 16,
@@ -947,7 +1023,8 @@
       },
       chronicle: {
         name: 'Chronicle',
-        emoji: '&#9997;&#65039;',
+        iconClass: 'lucide lucide-pen-tool',
+        emoji: '&#9997;&#65039;', // Keep for backward compatibility
         role: 'Newsroom Editor',
         sprite: '/assets/sprites/birch.png',
         spriteWidth: 16,
@@ -956,7 +1033,8 @@
       },
       trends: {
         name: 'Trends',
-        emoji: '&#128200;',
+        iconClass: 'lucide lucide-trending-up',
+        emoji: '&#128200;', // Keep for backward compatibility
         role: 'Intelligence Analyst',
         sprite: '/assets/sprites/maxie.png',
         spriteWidth: 16,
@@ -965,7 +1043,8 @@
       },
       maven: {
         name: 'Maven',
-        emoji: '&#128075;',
+        iconClass: 'lucide lucide-user',
+        emoji: '&#128075;', // Keep for backward compatibility
         role: 'General Assistant',
         sprite: '/assets/sprites/may.png',
         spriteWidth: 14,
@@ -1036,7 +1115,7 @@
     // Show agent modal
     function showAgentModal(agent) {
       const modal = document.getElementById('agent-modal');
-      document.getElementById('agent-modal-name').innerHTML = agent.emoji + ' ' + agent.name;
+      document.getElementById('agent-modal-name').innerHTML = '<span class="' + agent.iconClass + '"></span> ' + agent.name;
       document.getElementById('agent-modal-role').textContent = agent.role;
       document.getElementById('agent-modal-description').textContent = agent.description;
       
