--- a/index.html
+++ b/index.html
@@ -700,12 +700,14 @@
     }
 
     .avatar-option img {
-      width: 32px;
-      height: 40px;
+      width: 100%;
+      height: 100%;
+      max-width: 44px;
+      max-height: 44px;
       image-rendering: pixelated;
       image-rendering: crisp-edges;
-      object-fit: none;
-      object-position: 0 0;
+      object-fit: contain;
+      object-position: center;
     }
 
     .info-row {
