Add Gandalfius agent, tabbed chat UI, agent proximity chat (C key), and database migrations
Features:
- New agent: Gandalfius the Freelancing Wizard (Jamie Brindle teachings)
- Tabbed chat: Agent Chat and Room Chat tabs with real-time multiplayer messaging
- Agent proximity: Walk to agent and press C to chat, or click on agent
- Chat bubbles appear above remote players when they send messages

Database migrations:
- 001_add_gandalfius.sql: Adds Gandalfius agent, prompt, spawn point
- 002_add_meeting_rooms.sql: Adds meeting room data to database

--- a/index.html
+++ b/index.html
@@ -1647,6 +1647,17 @@
           </div>
           <div class="agent-status"></div>
         </div>
+
+        <div class="agent-card" data-agent="gandalfius">
+          <div class="agent-sprite-container">
+            <div class="agent-sprite" style="background-image: url('/assets/sprites/joseph.png');"></div>
+          </div>
+          <div class="agent-info">
+            <h4><span class="lucide lucide-wand-2"></span> Gandalfius</h4>
+            <div class="role">Freelancing Wizard</div>
+          </div>
+          <div class="agent-status"></div>
+        </div>
       </div>
     </div>
 
@@ -1917,6 +1928,16 @@
         spriteWidth: 14,
         description: 'Maven is your friendly general assistant, great for casual conversations, general questions, and coordinating with other agents.',
         keywords: ['hello', 'help', 'general', 'weather', 'question']
+      },
+      gandalfius: {
+        name: 'Gandalfius',
+        iconClass: 'lucide lucide-wand-2',
+        emoji: '&#129497;', // Wizard emoji
+        role: 'Freelancing Wizard',
+        sprite: '/assets/sprites/joseph.png',
+        spriteWidth: 16,
+        description: 'Gandalfius is the wise Freelancing Wizard who transforms freelancers into Entrelancers. Expert in pricing strategies, client communication, scope management, and building scalable freelance businesses.',
+        keywords: ['freelance', 'pricing', 'rates', 'clients', 'proposal', 'scope', 'business', 'value', 'contract']
       }
     };
 
