--- a/index.html
+++ b/index.html
@@ -1632,6 +1632,8 @@
       width: 1rem;
       height: 1rem;
       margin-right: 6px;
+      color: #fff;
+      stroke: #fff;
     }
 
     /* Scrollbar styling */
