Refactor index.html: replace color and stroke properties with filter for improved icon visibility

--- a/index.html
+++ b/index.html
@@ -1632,8 +1632,7 @@
       width: 1rem;
       height: 1rem;
       margin-right: 6px;
-      color: #fff;
-      stroke: #fff;
+      filter: brightness(0) invert(1);
     }
 
     /* Scrollbar styling */
