Replace virtual joystick with D-pad controls for mobile
- Replace rex VirtualJoystick with custom D-pad buttons (more reliable)
- Add 4 directional buttons (up/down/left/right) in cross pattern
- Increase button sizes for better touch targets
- Add visual feedback on button press (brighter colors)
- Fix null checks in index.html for mobile chat functions
- Semi-transparent design that doesn't obstruct gameplay

--- a/index.html
+++ b/index.html
@@ -2974,6 +2974,8 @@
     window.toggleMobileChat = function() {
       const overlay = document.getElementById('mobile-chat-overlay');
       const toggle = document.getElementById('mobile-chat-toggle');
+      if (!overlay || !toggle) return;
+      
       if (overlay.classList.contains('active')) {
         overlay.classList.remove('active');
         toggle.style.display = 'block';
@@ -3000,12 +3002,14 @@
       const agentChat = document.getElementById('mobile-agent-chat');
       const roomChat = document.getElementById('mobile-room-chat');
       
-      if (tab === 'agent') {
-        agentChat.style.display = 'flex';
-        roomChat.style.display = 'none';
-      } else {
-        agentChat.style.display = 'none';
-        roomChat.style.display = 'flex';
+      if (agentChat && roomChat) {
+        if (tab === 'agent') {
+          agentChat.style.display = 'flex';
+          roomChat.style.display = 'none';
+        } else {
+          agentChat.style.display = 'none';
+          roomChat.style.display = 'flex';
+        }
       }
     };
 
