Fix avatar picker in settings modal - show first frame of sprite sheets

--- a/index.html
+++ b/index.html
@@ -1025,15 +1025,13 @@
     .avatar-option {
       width: 48px;
       height: 48px;
-      background: #0d0d14;
+      background-color: #0d0d14;
       border: 2px solid #2a2a3e;
       border-radius: 10px;
       cursor: pointer;
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       transition: all 0.2s;
+      background-position: center center;
     }
 
     .avatar-option:hover {
@@ -1047,14 +1045,44 @@
     }
 
     .avatar-option img {
-      width: 100%;
-      height: 100%;
-      max-width: 44px;
-      max-height: 44px;
+      display: none; /* Hide img, use background instead */
+    }
+    
+    .avatar-option {
+      background-size: auto 100%;
+      background-repeat: no-repeat;
+      background-position: 0 0;
       image-rendering: pixelated;
       image-rendering: crisp-edges;
-      object-fit: contain;
-      object-position: center;
+    }
+    
+    .avatar-option[data-avatar="brendan"] {
+      background-image: url('/assets/sprites/brendan.png');
+      background-size: auto 40px; /* 14x21 sprite, scaled up */
+    }
+    .avatar-option[data-avatar="may"] {
+      background-image: url('/assets/sprites/may.png');
+      background-size: auto 40px; /* 14x20 sprite, scaled up */
+    }
+    .avatar-option[data-avatar="joseph"] {
+      background-image: url('/assets/sprites/joseph.png');
+      background-size: auto 40px; /* 14x21 sprite, scaled up */
+    }
+    .avatar-option[data-avatar="archie"] {
+      background-image: url('/assets/sprites/archie.png');
+      background-size: auto 40px; /* 16x20 sprite, scaled up */
+    }
+    .avatar-option[data-avatar="maxie"] {
+      background-image: url('/assets/sprites/maxie.png');
+      background-size: auto 40px; /* 16x20 sprite, scaled up */
+    }
+    .avatar-option[data-avatar="steven"] {
+      background-image: url('/assets/sprites/steven.png');
+      background-size: auto 40px; /* 16x21 sprite, scaled up */
+    }
+    .avatar-option[data-avatar="birch"] {
+      background-image: url('/assets/sprites/birch.png');
+      background-size: auto 40px; /* 16x20 sprite, scaled up */
     }
 
     .info-row {
