--- a/index.html
+++ b/index.html
@@ -1049,57 +1049,20 @@
     }
     
     /* Sprite sheets are 12 frames horizontal. We show first frame only.
-       background-size: 1200% stretches so 1 frame = 100% of container width.
-       background-position: 0 center shows first frame centered vertically. */
-    .avatar-option[data-avatar="brendan"] {
-      background-image: url('/assets/sprites/brendan.png');
-      background-size: 1200% auto;
-      background-position: 0% center;
+       background-size: 720% shows first frame with some padding around it.
+       background-position: 0 center shows first frame centered. */
+    .avatar-option[data-avatar] {
       background-repeat: no-repeat;
-      image-rendering: pixelated;
-    }
-    .avatar-option[data-avatar="may"] {
-      background-image: url('/assets/sprites/may.png');
-      background-size: 1200% auto;
       background-position: 0% center;
-      background-repeat: no-repeat;
-      image-rendering: pixelated;
+      background-size: 720% auto;
     }
-    .avatar-option[data-avatar="joseph"] {
-      background-image: url('/assets/sprites/joseph.png');
-      background-size: 1200% auto;
-      background-position: 0% center;
-      background-repeat: no-repeat;
-      image-rendering: pixelated;
-    }
-    .avatar-option[data-avatar="archie"] {
-      background-image: url('/assets/sprites/archie.png');
-      background-size: 1200% auto;
-      background-position: 0% center;
-      background-repeat: no-repeat;
-      image-rendering: pixelated;
-    }
-    .avatar-option[data-avatar="maxie"] {
-      background-image: url('/assets/sprites/maxie.png');
-      background-size: 1200% auto;
-      background-position: 0% center;
-      background-repeat: no-repeat;
-      image-rendering: pixelated;
-    }
-    .avatar-option[data-avatar="steven"] {
-      background-image: url('/assets/sprites/steven.png');
-      background-size: 1200% auto;
-      background-position: 0% center;
-      background-repeat: no-repeat;
-      image-rendering: pixelated;
-    }
-    .avatar-option[data-avatar="birch"] {
-      background-image: url('/assets/sprites/birch.png');
-      background-size: 1200% auto;
-      background-position: 0% center;
-      background-repeat: no-repeat;
-      image-rendering: pixelated;
-    }
+    .avatar-option[data-avatar="brendan"] { background-image: url('/assets/sprites/brendan.png'); }
+    .avatar-option[data-avatar="may"] { background-image: url('/assets/sprites/may.png'); }
+    .avatar-option[data-avatar="joseph"] { background-image: url('/assets/sprites/joseph.png'); }
+    .avatar-option[data-avatar="archie"] { background-image: url('/assets/sprites/archie.png'); }
+    .avatar-option[data-avatar="maxie"] { background-image: url('/assets/sprites/maxie.png'); }
+    .avatar-option[data-avatar="steven"] { background-image: url('/assets/sprites/steven.png'); }
+    .avatar-option[data-avatar="birch"] { background-image: url('/assets/sprites/birch.png'); }
 
     .info-row {
       display: flex;
