Center avatar sprites in picker boxes

--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,9 @@
       cursor: pointer;
       overflow: hidden;
       transition: all 0.2s;
-      background-position: center center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .avatar-option:hover {
